force-app/main/default/objects/SCC_Interface_Operation_Setting__mdt/SCC_Interface_Operation_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Integration Operation Setting</label>
    <pluralLabel>Integration Operation Settings</pluralLabel>
</CustomObject>