force-app/main/default/objects/SCC_Interface_Operation_Setting__mdt/fields/Correlation_ID__c.field-meta.xml
<CustomField>
    <fullName>Correlation_ID__c</fullName>
    <description>Key in the API response header</description>
    <label>Correlation ID Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>