force-app/main/default/objects/SCC_Interface_Operation_Setting__mdt/fields/http_code_field__c.field-meta.xml
<CustomField>
    <fullName>http_code_field__c</fullName>
    <label>http code field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>