force-app/main/default/objects/SCC_Interface_Operation_Setting__mdt/fields/IDCC_ClientID__c.field-meta.xml
<CustomField>
    <fullName>IDCC_ClientID__c</fullName>
    <label>ClientID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>