force-app/main/default/objects/SCC_Interface_Operation_Setting__mdt/fields/IDCC_Content_Type__c.field-meta.xml
<CustomField>
    <fullName>IDCC_Content_Type__c</fullName>
    <label>Content Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>