force-app/main/default/objects/SCC_Interface_Operation_Setting__mdt/fields/IDCC_EndPoint__c.field-meta.xml
<CustomField>
    <fullName>IDCC_EndPoint__c</fullName>
    <label>EndPoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>