force-app/main/default/objects/SCC_Interface_Operation_Setting__mdt/fields/IDCC_Password__c.field-meta.xml
<CustomField>
    <fullName>IDCC_Password__c</fullName>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>