force-app/main/default/objects/SCC_Interface_Operation_Setting__mdt/fields/Interface_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Interface_Configuration__c</fullName>
    <label>IDS Interface Configuration</label>
    <referenceTo>SCC_Interface_Configuration__mdt</referenceTo>
    <relationshipName>SCC_Integration_Operation_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>