force-app/main/default/objects/SCC_Interface_Operation_Setting__mdt/fields/Msg_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Msg_Mapping__c</fullName>
    <label>Object Conversion Map</label>
    <referenceTo>SCC_Object_Conversion_Map__mdt</referenceTo>
    <relationshipLabel>IDS Interface Operation Settings</relationshipLabel>
    <relationshipName>ids_Interface_Operation_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>