force-app/main/default/objects/SCC_Interface_Operation_Setting__mdt/fields/Named_Credential_Overwrite__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential_Overwrite__c</fullName>
    <label>Named Credential Overwrite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>