force-app/main/default/objects/SCC_Interface_Operation_Setting__mdt/fields/response_message_field__c.field-meta.xml
<CustomField>
    <fullName>response_message_field__c</fullName>
    <label>response message field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>