force-app/main/default/objects/SCC_Interface_Operation_Setting__mdt/fields/Result_Verification__c.field-meta.xml
<CustomField>
    <fullName>Result_Verification__c</fullName>
    <label>Result_Verification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>