force-app/main/default/objects/SCC_Interface_Operation_Setting__mdt/fields/Sub_URL__c.field-meta.xml
<CustomField>
    <fullName>Sub_URL__c</fullName>
    <label>Sub URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>