force-app/main/default/objects/SCC_Interface_Operation_Setting__mdt/fields/Test_Data__c.field-meta.xml
<CustomField>
    <fullName>Test_Data__c</fullName>
    <label>Test Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>