force-app/main/default/objects/SCC_Interface_Operation_Setting__mdt/fields/test_http_code__c.field-meta.xml
<CustomField>
    <fullName>test_http_code__c</fullName>
    <defaultValue>200</defaultValue>
    <label>test http code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>