force-app/main/default/objects/SCC_Interface_Operation_Setting__mdt/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <description>In milisecond</description>
    <label>Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>